--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack' 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @themepack 'powerline/default/cyan' 
 #window navigation
 
