--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,10 +27,12 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack' 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/default/cyan' 
-#window navigation
+
+#for restoring of session even after restar:
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
 
